--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css"/>
     <title>Home</title>
 </head>
-<body class="homeBody">
+<body>
     <nav class="nav">
       <a href="./index.html">Home</a>
       <a href="./about.html">About</a>
