--- a/Product.html
+++ b/Product.html
@@ -9,9 +9,9 @@
 <body class="body">
     <nav class="nav">
         <a href="./index.html">Home</a>
-        <a href="./about.html">About</a>
+        <a href="./About.html">About</a>
         <a href="./Product.html">Product</a>
-        <a href="./contact.html">Contact</a>
+        <a href="./Contact.html">Contact</a>
     </nav>
     <h1>Products</h1>
     
