--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <nav class="nav">
       <a href="./index.html">Home</a>
-      <a href="./about.html">About</a>
+      <a href="./About.html">About</a>
       <a href="./Product.html">Product</a>
-      <a href="./contact.html">Contact</a>
+      <a href="./Contact.html">Contact</a>
     </nav>
   <h1>Home</h1>
 
   <div>
       <p>Hi! Welcome to Munamii Cakery! We offer you the most delicious cakes and cupcakes
           for all kinds of events and celebrations. Browse around to discover what you would like
-          to buy.
+          to buy
       </p>
   </div>
 </body>
