Major overhaul to make it responsive

--- a/About.html
+++ b/About.html
@@ -7,14 +7,16 @@
     <title>About</title>
 </head>
 <body>
-    <nav class="nav">
-        <a href="./index.html">Home</a>
-        <a href="./About.html">About</a>
-        <a href="./Product.html">Product</a>
-        <a href="./Contact.html">Contact</a>
-    </nav>
+    <div class="navBar">
+        <nav class="nav">
+          <div class="navHome"><a href="./index.html">Home</a></div>
+          <div class="navAbout"><a href="./About.html">About</a></div>
+          <div class="navProduct"><a href="./Product.html">Product</a></div>
+          <div class="navContact"><a href="./Contact.html">Contact</a></div>
+        </nav>
+    </div>
     <h1>About Munamii Cakery</h1>
-    <div>
+    <div class="Content">
         <p>
             At Munamii Cakery, each cake, each box of cupcakes that we make has a very special
             value for us. We not only want to bring a dessert to your table but rather a unique
@@ -23,8 +25,8 @@
             our website.
         </p>
     </div>
+    <hr>
+        <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>    
 </body>
-    <section class="footer">
-        <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>
-    </section>
+    
 </html>
