--- a/Contact.html
+++ b/Contact.html
@@ -7,28 +7,28 @@
     <title>Contact</title>
 </head>
 <body>
-    <nav class="nav">
-        <a href="./index.html">Home</a>
-        <a href="./About.html">About</a>
-        <a href="./Product.html">Product</a>
-        <a href="./Contact.html">Contact</a>
-      </nav>
+    <div class="navBar">
+        <nav class="nav">
+          <div class="navHome"><a href="./index.html">Home</a></div>
+          <div class="navAbout"><a href="./About.html">About</a></div>
+          <div class="navProduct"><a href="./Product.html">Product</a></div>
+          <div class="navContact"><a href="./Contact.html">Contact</a></div>
+        </nav>
+    </div>
     <h1>Contact</h1>
-    <div class="contact">
+    <div class="content">
         <p>
             Home delivery service: All the city of Stockholm (redacted) and Malmo (redacted) with
-            additional cost.</p>
-        <p>
+            additional cost.<br>
             Place to pick up order: Via la Costa Avenue. Blue Port gated neighbourhood. We will
             send you the GPS Location via WhatsApp.</p>
         <p>
-            Orders must be placed 2 days before for greater security, processing and availability.
-            Tuesday to Saturday
-            9 a.m. at 2 p.m.
-            </p>
+            Orders must be placed 2 days before for greater security, processing and availability.</p>
+        <p>
+            Tuesday to Saturday 9 a.m. at 2 p.m.</p>
+            
     </div>
+    <hr>
+        <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>    
 </body>
-    <section class="footer">
-        <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>
-    </section>
 </html>
