--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <title>Home</title>
 </head>
 <body>
+  <div class="navBar">
     <nav class="nav">
-      <a href="./index.html">Home</a>
-      <a href="./About.html">About</a>
-      <a href="./Product.html">Product</a>
-      <a href="./Contact.html">Contact</a>
+      <div class="navHome"><a href="./index.html">Home</a></div>
+      <div class="navAbout"><a href="./About.html">About</a></div>
+      <div class="navProduct"><a href="./Product.html">Product</a></div>
+      <div class="navContact"><a href="./Contact.html">Contact</a></div>
     </nav>
+  </div>
   <h1>Home</h1>
 
-  <div>
+  <div class="Content">
       <p>Hi! Welcome to Munamii Cakery! We offer you the most delicious cakes and cupcakes
           for all kinds of events and celebrations. Browse around to discover what you would like
           to buy
       </p>
   </div>
+  <hr>
+    <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>    
 </body>
-  <section class="footer">
-    <footer>Check out my <a class="links" href="https://www.instagram.com/munamii.cakery/">Instagram</a> and <a class="links" href="https://www.facebook.com/munamiicupcakes">Facebook</a></footer>
-  </section>
+  
 </html>
 
 
